--- a/public/cart.html
+++ b/public/cart.html
@@ -19,11 +19,11 @@
             <div class="header__wrapper-wrap">
                 <a href="index.html"><img class="header__logo" src="imgs/logo.svg" alt="logo" width="44"
                         height="38"></a>
-                <form class="header__wrapper-search search-form" action="" method="get">
-                    <input class="search-form__input" name="s" placeholder="Искать здесь..." type="search">
+                <!-- <form class="header__wrapper-search search-form" @submit.prevent="filter" action="#">
+                    <input class="search-form__input" v-model='userSearch' placeholder="Искать здесь..." type="search">
                     <button class="search-form__button" type="submit"><img class="header__loupe" src="imgs/loupe.svg"
                             alt="loupe" width="26" height="27"></button>
-                </form>
+                </form> -->
             </div>
             <div>
                 <button class="header__menu-button" type="button" @click='showMenu = !showMenu'><img
@@ -31,13 +31,13 @@
                 <a class="header__link" href="registration.html"><img src="imgs/reg.svg" alt="registarion"></a>
                 <a class="header__link header__link-position" href="cart.html"><img src="imgs/cart.svg" alt="cart">
                     <img class="header__cartlist" src="imgs/cart-list.svg" alt="cart-list"><span
-                        class="header__cartlist-counter">0</span></a>
+                        class="header__cartlist-counter"></span></a>
                 <menu-nav :visibility="showMenu"></menu-nav>
             </div>
         </div>
     </header>
 
-    <main class="shopping-cart">
+    <main class="shopping-cart" id="main">
         <section class="heading-block">
             <div class="heading-block container-main container--tablet">
                 <h1 class="heading-block__heading">SHOPPING CART</h1>
@@ -46,55 +46,10 @@
         <div class="shopping-wrapper container-main container--tablet container--mobile">
             <section class="cart-list">
                 <div class="cart-list__wrapper">
-                    <div class="cart-block">
-                        <div class="cart-block__img-wrapper cart-img"><img class="cart-img__img" src="./imgs/card3.jpg"
-                                alt="card3"></div>
-                        <div class="cart-block__block-items cart-items">
-                            <h3 class="cart-items__heading-cart">MANGO PEOPLE T-SHIRT</h3>
-                            <ul class="cart-items__list-desc desc-items">
-                                <li class="desc-items__item-price cart-info"><span class="cart-info__text">Price:
-                                    </span><span class="cart-info__value-pink">$300</span></li>
-                                <li class="desc-items__item-color cart-info"><span class="cart-info__text">Color:
-                                    </span><span class="cart-info__value">Red</span></li>
-                                <li class="desc-items__item-size cart-info"><span class="cart-info__text">Size:
-                                    </span><span class="cart-info__value">Xl</span>
-                                </li>
-                                <li class="desc-items__item-quantity cart-info"><span class="cart-info__text">Quantity:
-                                    </span><input class="cart-info__value cart-info__value-input" type="text"
-                                        placeholder="2" pattern="^[ 0-9]+$" required></li>
-                            </ul>
-                            <button class="cart-items__button-close" type="button"><img class="cart-items__img-close"
-                                    src="imgs/close-menu.svg" alt="close"></button>
-                        </div>
-                    </div>
-                    <div class="cart-block">
-                        <div class="cart-block__img-wrapper cart-img"><img class="cart-img__img" src="./imgs/card7.jpg"
-                                alt="card7"></div>
-                        <div class="cart-block__block-items cart-items">
-                            <h3 class="cart-items__heading-cart">MANGO PEOPLE T-SHIRT</h3>
-                            <ul class="cart-items__list-desc desc-items">
-                                <li class="desc-items__item-price cart-info"><span class="cart-info__text">Price:
-                                    </span><span class="cart-info__value-pink">$300</span></li>
-                                <li class="desc-items__item-color cart-info"><span class="cart-info__text">Color:
-                                    </span><span class="cart-info__value">Red</span></li>
-                                <li class="desc-items__item-size cart-info"><span class="cart-info__text">Size:
-                                    </span><span class="cart-info__value">Xl</span>
-                                </li>
-                                <li class="desc-items__item-quantity cart-info"><span class="cart-info__text">Quantity:
-                                    </span><input class="cart-info__value cart-info__value-input" type="text"
-                                        placeholder="2" pattern="^[ 0-9]+$" required></li>
-                            </ul>
-                            <button class="cart-items__button-close" type="button"><img class="cart-items__img-close"
-                                    src="imgs/close-menu.svg" alt="close"></button>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="cart-list__button-wrapper"><button class="cart-clear-button" type="button">Clear
-                        shopping
-                        cart</button>
-                    <a href="catalog.html"><button class="cart-continue-button" type="button">Continue
-                            shopping</button></a>
+                    <cart-list :cart-items="cartFiltered"></cart-list>
+                    <cart-button></cart-button>
+                    <attention-delete :visibility="attentionDeleteShow"></attention-delete>
+                    <attention-alldelete :visibility="attentionAllDeleteShow"></attention-alldelete>
                 </div>
             </section>
             <section class="delivery">
@@ -165,6 +120,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script src="scripts/menuComp.js"></script>
+    <script src="scripts/catalogComp.js"></script>
+    <script src="scripts/cartComp.js"></script>
     <script src="scripts/main.js"></script>
 
 </body>
