--- a/public/product.html
+++ b/public/product.html
@@ -56,7 +56,7 @@
         </section>
         <section class="product__slider">
             <h2 class="visually-hidden">Product slider preview</h2>
-            <div id="carousel-main" class="carousel slide" data-bs-ride="carousel">
+            <div id="carousel-main" class="carousel slide" data-bs-ride="carousel" data-touch="true">
                 <div class="carousel-inner carousel-inner-center">
                     <div class="carousel-item active">
                         <img src="imgs/slider-girl.jpg" class="product__slider-item" alt="slider-girl">
